objects/ScratchOrgInfo.object
<CustomObject>
    <fields>
        <fullName>Allocation_status__c</fullName>
        <label>Allocation status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Allocate</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Return</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pooltag__c</fullName>
        <label>Pooltag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SfdxAuthUrl__c</fullName>
        <label>Sfdx Auth Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Scratch_Org_Infos</fullName>
        <filterScope>Everything</filterScope>
        <label>All Scratch Org Infos</label>
    </listViews>
    <listViews>
        <fullName>My_Scratch_Org_Infos</fullName>
        <filterScope>Mine</filterScope>
        <label>My Scratch Org Infos</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Scratch_org_is_already_in_use</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Allocation_status__c , &quot;Allocate&quot;) &amp;&amp; ISPICKVAL( PRIORVALUE(Allocation_status__c) , &quot;Assigned&quot;) &amp;&amp; ISCHANGED(Allocation_status__c)</errorConditionFormula>
        <errorMessage>Scratch org is already in use</errorMessage>
    </validationRules>
</CustomObject>